--- a/templates/home/newsletter.html.twig
+++ b/templates/home/newsletter.html.twig
@@ -4,6 +4,7 @@
     {{ encore_entry_link_tags('home') }}
     <section class="bg-orange">
         <div class="link-container">
+            {{ form(form) }}
         </div>
     </section>
 {% endblock %}
