--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -23,7 +23,7 @@
             <h2>COMING SOON</h2>
         </div>
         <div class="link-container">
-            <a href="{{ path('newsletter') }}" class="btn">POUR RECEVOIR DES INFOS</a>
+            <a href="{{ path('newsletter') }}" class="btn btn-big">POUR RECEVOIR DES INFOS</a>
         </div>
     </section>
     {{ encore_entry_script_tags('home') }}
